# openapi.yaml
@@ -9,11 +9,32 @@ produces:
   - application/json
 host: example.org
 tags:
+  - name: transfer
+    description: Operations about transfers
   - name: health
     description: Operations about healths
   - name: api
     description: Operations about apis
 paths:
+  /transfer:
+    post:
+      description: Initiate a new transfer.
+      produces:
+        - application/json
+      consumes:
+        - application/json
+      parameters:
+        - name: postTransfer
+          in: body
+          required: true
+          schema:
+            $ref: '#/definitions/postTransfer'
+      responses:
+        "201":
+          description: Initiate a new transfer.
+      tags:
+        - transfer
+      operationId: postTransfer
   /health:
     get:
       produces:
@@ -57,3 +78,45 @@ paths:
       tags:
         - api
       operationId: getApiName
+definitions:
+  postTransfer:
+    type: object
+    properties:
+      source:
+        type: object
+        description: The source document.
+        properties:
+          type:
+            type: string
+            description: The type of the source document.
+            enum:
+              - url
+          url:
+            type: string
+            format: uri
+            description: The URL of the document to be transferred. Required when the source type is "url".
+        required:
+          - type
+          - url
+      destination:
+        type: object
+        description: The destination for the document.
+        properties:
+          type:
+            type: string
+            description: The document destination type.
+            enum:
+              - onedrive
+          path:
+            type: string
+            description: The path to store the document in the destination.
+            default: ""
+          filename:
+            type: string
+            description: The filename to store the document as in the destination, if different from the source.
+        required:
+          - type
+    required:
+      - source
+      - destination
+    description: Initiate a new transfer.
